[package]
name = "starknet-e2e-test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
assert_matches = "1.5.0"
async-trait = "0.1"
ethers = { workspace = true }
ethers-solc = "2.0.7"
flate2 = { workspace = true }
home = "0.5.5"
reqwest = "0.11.18"
rstest = "0.18.1"
serde = { version = "1.0.179", features = ["derive"] }
serde_json = "1.0.107"
tempdir = "0.3.7"
test-context = "0.1.3"
thiserror = { workspace = true }
tokio = { version = "1.29.1", features = ["rt", "macros", "parking_lot"] }
url = "2.4.1"

# Starknet
starknet-accounts = { workspace = true }
starknet-contract = { workspace = true }
starknet-core = { workspace = true }
starknet-crypto = { workspace = true }
starknet-ff = { workspace = true }
starknet-providers = { workspace = true }
starknet-signers = { workspace = true }
starknet_api = { workspace = true, default-features = true }

# Madara
madara-runtime = { workspace = true }
madara-test-runner = { workspace = true }
mc-settlement = { workspace = true }
mp-snos-output = { workspace = true }

[[test]]
name = "ethereum_core_contract"
path = "ethereum_core_contract.rs"

[[test]]
name = "ethereum_e2e_settlement"
path = "ethereum_e2e_settlement.rs"
