[package]
name = "starknet-e2e-test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
assert_matches = "1.5.0"
async-trait = "0.1"
ethers = { workspace = true }
rand = "0.8.5"
reqwest = "0.11.18"
rstest = "0.18.1"
serde_json = "1.0.107"
test-context = "0.1.3"
tokio = { version = "1.36.0", features = ["rt", "macros", "parking_lot"] }

# Starknet
starknet-accounts = { workspace = true }
starknet-contract = { workspace = true }
starknet-core = { workspace = true }
starknet-ff = { workspace = true }
starknet-providers = { workspace = true }
starknet-test-utils = { workspace = true }
starknet_api = { workspace = true }

# Madara
madara-runtime = { workspace = true }
madara-test-runner = { workspace = true }
mc-eth-client = { workspace = true }
mc-settlement = { workspace = true }
mp-felt = { workspace = true }
mp-messages = { workspace = true }
mp-snos-output = { workspace = true }

# Zaun
ethereum-instance = { workspace = true }
starkgate-manager-client = { workspace = true }
starkgate-registry-client = { workspace = true }
starknet-core-contract-client = { workspace = true }
starknet-erc20-client = { workspace = true }
starknet-eth-bridge-client = { workspace = true }
starknet-proxy-client = { workspace = true }
starknet-token-bridge-client = { workspace = true }
zaun-utils = { workspace = true }

[[test]]
name = "ethereum_core_contract"
path = "ethereum_core_contract.rs"

[[test]]
name = "ethereum_settlement"
path = "ethereum_settlement.rs"

[[test]]
name = "ethereum_e2e"
path = "ethereum_e2e.rs"
