[package]
name = "starknet-rpc-test"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.72"
derive_more = "0.99.17"
reqwest = "0.11.18"
serde = { version = "1.0.179", features = ["derive"] }
serde_json = "1.0.104"
starknet-ff = {workspace = true}
starknet-core = {workspace = true}
starknet-crypto = {workspace = true}
starknet-providers = {workspace = true}
url = "2.2.2"

[dev-dependencies]
tokio = { version = "1.29.1", features = ["rt", "macros"] }


[[test]]
name = "starknet_get_block_number"
path = "get_block_number.rs"

[[test]]
name = "starknet_get_block_hash_and_number"
path = "get_block_hash_and_number.rs"
