[package]
name = "kaioshin-rpc-core"
version = "0.1.0-dev"
license = "MIT"
description = "Starknet primitives for Substrate."
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[dependencies]
serde = { version = "1.0.136", features = ["derive"], optional = true }
serde_json = "1.0.85"
sp-core = { default-features = false, git = "https://github.com/keep-starknet-strange/substrate.git", branch = "kaioshin-dev" }
jsonrpsee = { workspace = true, features = [ "macros", "server" ] }
kaioshin-runtime = { path = "../../runtime" }
