[package]
name = "kaioshin-rpc"
version = "0.1.0-dev"
license = "MIT"
description = "Starknet primitives for Substrate."
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[dependencies]
jsonrpsee = { workspace = true, features = [ "macros", "server" ] }
tokio = { version = "1.24", features = ["sync"] }
kaioshin-rpc-core = { workspace = true }
sc-transaction-pool = { workspace = true }
