[package]
name = "madara"
version.workspace = true
edition.workspace = true
description = "Madara node."
authors = [
  "Abdelhamid Bakhta <@keep-starknet-strange>",
  "Substrate DevHub <https://github.com/substrate-developer-hub>",
]
homepage = "https://github.com/keep-starknet-strange/madara"
license = "MIT"
publish = false
repository = "https://github.com/keep-starknet-strange/madara"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "madara"

[dependencies]

async-trait = "0.1"
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true, features = ["thread-pool"] }
log = { workspace = true }
serde = { workspace = true }
sha3 = { workspace = true }

frame-system = { workspace = true }
sc-basic-authorship = { workspace = true }
sc-block-builder = { workspace = true }
sc-cli = { workspace = true }
sc-client-api = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-aura = { workspace = true }
sc-consensus-grandpa = { workspace = true }
sc-consensus-manual-seal = { workspace = true }
sc-executor = { workspace = true }
sc-network = { workspace = true }
sc-network-sync = { workspace = true }
sc-offchain = { workspace = true }
sc-service = { workspace = true }
sc-telemetry = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-consensus-grandpa = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-keyring = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-state-machine = { workspace = true }
sp-statement-store = { workspace = true }
sp-timestamp = { workspace = true }

# These dependencies are used for the node template's RPCs
jsonrpsee = { workspace = true, features = ["server"] }

# Substrate primitives dependencies
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-blockchain = { workspace = true }
# Substrate client dependencies
prometheus-endpoint = { workspace = true }
sc-rpc-api = { workspace = true }
# Substrate frame dependencies
# no substrate frame pallet dependencies for now

# Substrate tools dependencies
substrate-frame-rpc-system = { workspace = true }
# These dependencies are used for runtime benchmarking
frame-benchmarking = { workspace = true }
frame-benchmarking-cli = { workspace = true }
madara-runtime = { workspace = true, features = ["std"] }
mc-db = { workspace = true }
mc-eth-client = { workspace = true }
mc-l1-gas-price = { workspace = true }
mc-l1-messages = { workspace = true }
mc-mapping-sync = { workspace = true }
mc-rpc = { workspace = true }
mc-starknet-block-import = { workspace = true, optional = true }
mc-storage = { workspace = true }
pallet-starknet = { workspace = true, features = ["genesis-loader"] }
pallet-starknet-runtime-api = { workspace = true }

# Madara utils
mc-genesis-data-provider = { workspace = true }

# Primitives
mp-block = { workspace = true }
mp-digest-log = { workspace = true }
mp-felt = { workspace = true }
mp-starknet-inherent = { workspace = true, features = ["client"] }

# Starknet
blockifier = { workspace = true }


# CLI-specific dependencies
reqwest = { workspace = true, features = ["blocking"] }
serde_json = { workspace = true }
try-runtime-cli = { optional = true, git = "https://github.com/massalabs/polkadot-sdk", branch = "features/add_block_builder_extrinsic_getters" }
url = { workspace = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[features]
# Dependencies that are only required if runtime benchmarking should be build.
runtime-benchmarks = [
  "madara-runtime/runtime-benchmarks",
  "frame-benchmarking/runtime-benchmarks",
  "frame-benchmarking-cli/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = ["madara-runtime/try-runtime", "try-runtime-cli/try-runtime"]
disable-transaction-fee = ["madara-runtime/disable-transaction-fee"]
# Load sharingan chain-specs during the compilation
# This is the way to run a sharingan chain
sharingan = []
# Enables Sierra class verification for foreign blocks only + disabled in manual sealing mode
sn-block-import = ["dep:mc-starknet-block-import"]
# Enables Sierra class verification for both own and foreign blocks only + enabled for manual sealing mode
sn-block-import-testing = ["sn-block-import"]
# Enables dev features to improve DevX
dev = ["madara-runtime/dev"]
