[package]
name = "madara-rpc"
version = "0.1.0-dev"
license = "MIT"
description = "Starknet primitives for Substrate."
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[dependencies]
# Substrate dependencies
sp-api = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-blockchain = { workspace = true }
pallet-transaction-payment-rpc = { workspace = true }
substrate-frame-rpc-system = { workspace = true }

# Madara dependencies
mp-starknet = { workspace = true }
madara-runtime = { path = "../runtime" }

pallet-starknet = { workspace = true }
starknet_api = { workspace = true, default-features = false }

# Other third party dependencies
serde = { version = "1.0.136", features = ["derive"], default-features = false }
serde_json = { version = "1.0.85", default-features = false }
tokio = { version = "1.24", features = ["sync"] }
jsonrpsee = { workspace = true, features = [ "macros", "server" ] }
thiserror = "1.0.40"
tracing = "0.1.37"
